2012-05-26  Stanislas Rolland  <typo3@sjbr.ca>
	* Add class tx_srsendcard_email
	* Add scheduler task for sending deferred cards

2012-05-01  Stanislas Rolland  <typo3@sjbr.ca>
	* Always use utf-8 by default
	* Fix for tslib_pibase TYPO3 4.6+ and PHP 5.3+
	* Code cleanup
	* Use Swift mail API

2012-04-23  Stanislas Rolland  <typo3@sjbr.ca>
	* Add extension autoload

2011-12-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #32247: Fatal error for redeclare class
	* Added feature #32638: Remove deprecated card language overlay table
	* Added feature #32639: Remove deprecated old-style template
	* Added feature #32640: Require TYPO3 4.5 and PHP 5.3
	* Added feature #32640: Module compatibility with TYPO 4.6
	* Added feature #32642: Fix globals references
	* Added feature #32643: Eliminate reference to deprecated forceCharset
	* Added feature #32644: Eliminate reference to deprecated makeInstanceClassName
	* Added feature #32646: Eliminate reference to deprecated eregi_replace

2009-03-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug: Overlapping lines, sometimes, in text image (Thanks to Armin Günther)
	* Version 2.3.1 published to TER.

2009-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Replaced deprecated t3lib_div::fixed_lgd_pre with fixed_lgd_cs
	* Require TYPO3 4.1+.
	* Version 2.3.0 published to TER.

2009-02-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Initial upload to TYPO3 Forge
	* Added Russian translation