@@ -11,6 +11,7 @@ return array(
 	'tx_srsendcard_email' => $extensionPath . 'lib/class.tx_srsendcard_email.php',
 	'tx_srsendcard_cardmailer' => $extensionPath . 'tasks/class.tx_srsendcard_cardmailer.php',
 	'tx_srsendcard_cardmailer_additionalfieldprovider' => $extensionPath . 'tasks/class.tx_srsendcard_cardmailer_additionalfieldprovider.php',
+	'tx_srsendcard_statistics' => $extensionPath . 'mod1/class.tx_srsendcard_statistics.php',
 );
 unset($extensionPath);
 ?>
