@@ -20,7 +20,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'conflicts' => 'cc_cbrowse',
 	'priority' => '',
 	'loadOrder' => '',
-	'module' => 'mod1',
+	'module' => '',
 	'state' => 'stable',
 	'uploadfolder' => 1,
 	'createDirs' => '',
