@@ -1,11 +1,8 @@
 <?php
-	// DO NOT REMOVE OR CHANGE THESE 3 LINES:
-define('TYPO3_MOD_PATH', '../typo3conf/ext/sr_sendcard/mod1/');
-$BACK_PATH='../../../../typo3/';
 $MCONF['name'] = 'web_txsrsendcardM1';
 
 $MCONF['access'] = 'user,group';
-$MCONF['script'] = 'index.php';
+$MCONF['script'] = '_DISPATCH';
 
 $MLANG['default']['tabs_images']['tab'] = 'moduleicon.gif';
 $MLANG['default']['ll_ref'] = 'LLL:EXT:sr_sendcard/mod1/locallang_mod.xml';
